# Geographically-Weighted-Canonical-Correlation-Analysis

./: Example.ipynb  GWCCA_example.ipynb  GWCCA_example_package.ipynb  GWCCA_example_source.ipynb  LICENSE  README.md  gwcca.py  pyproject.toml  test.py
gwcca/: __init__.py  covariance.py  io.py  kernels.py  local.py  plotting.py  robust.py  smoothing.py  tuning.py  utils.py
gwcca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
