[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwcca"
version = "0.1.0"
description = "Geographically Weighted Canonical Correlation Analysis (GWCCA) with robust local covariance and optional smoothing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
geo = [
  "geopandas>=0.12",
  "pyogrio>=0.7"
]
plot = [
  "matplotlib>=3.6"
]
