[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwcca"
version = "0.1.0"
description = "Geographically Weighted Canonical Correlation Analysis (GWCCA) in Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Joseph Jiao", email = "your_email@example.com"}
]
dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/Josephjiao7/Geographically-Weighted-Canonical-Correlation-Analysis"
Issues = "https://github.com/Josephjiao7/Geographically-Weighted-Canonical-Correlation-Analysis/issues"

[tool.setuptools]
py-modules = ["gwcca"]
