[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwcca"
version = "0.1.0"
description = "Geographically Weighted Canonical Correlation Analysis (GWCCA)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Joseph Jiao"}]
dependencies = ["numpy", "scipy"]

[tool.setuptools]
py-modules = ["gwcca"]
